[gd_scene load_steps=3 format=3 uid="uid://bdwql4l00aknt"]

[ext_resource type="Script" uid="uid://c5k6eh0x44yye" path="res://logic/game_row.gd" id="1_vjiil"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vjiil"]

[node name="GameRow" type="PanelContainer"]
offset_left = 320.0
offset_right = 640.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vjiil")
script = ExtResource("1_vjiil")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(320, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerCountLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="ObserversLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="JoinButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play Game!"

[node name="JoinAsViewer" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Join as Viewer!"
